@@ -42,7 +42,9 @@
  * The correct functioning of this class does not rely on any HTML templates or
  * language files so it works even under the worst of circumstances.
  *
- * @author	Oliver Klee <typo3-coding@oliverklee.de>
+ * @package		TYPO3
+ * @subpackage	tx_oelib
+ * @author		Oliver Klee <typo3-coding@oliverklee.de>
  */
 
 require_once(PATH_t3lib.'class.t3lib_page.php');
