@@ -31,7 +31,9 @@
  *
  * This is an abstract class; don't instantiate it.
  *
- * @author	Oliver Klee <typo3-coding@oliverklee.de>
+ * @package		TYPO3
+ * @subpackage	tx_oelib
+ * @author		Oliver Klee <typo3-coding@oliverklee.de>
  */
 
 // Include the system extension lang if we are in the back end.
