@@ -1,4 +1,5 @@
 0.3.1 - currently working on
+- [#935] Change: Add @author, @package and @subpackage tags to all PHP classes
 
 0.3.0 - released 2007-06-01
 - Fix: The config check needs to know which class to instantiate (#364)
